syntax = "proto3";

message Response {
    string http_code = 1;
}

message AccessToken {
    string access = 1;
}